fixing up reference

--- a/school/elec_313/lab3/tex/report.tex
+++ b/school/elec_313/lab3/tex/report.tex
@@ -93,7 +93,7 @@ The objective is to construct, measure, and observe the behavior of two common d
 \subsection{Voltage Rectifier}
 \label{sec:rectifier}
 
-First, the capacitance of a \SI{1}{\micro\farad} capacitor was measured and  recorded in Table~\ref{tab:cap} along with the percent difference calculated (Eq~\label{eq:percent_diff}).  Then the circuit shown in Figure~\ref{fig:volt_rect} was constructed on a breadboard.  The voltage source ($V_S$) and \SI{50}{\ohm} resistor seen in Figure~\ref{fig:volt_rect} represented the function generator used.  Using a resistive decade box, the load resistance ($R_L$) was initially set to \SI{10}{\kilo\ohm}.  Then, the first channel of the oscilloscope was set to measure the output of the function generator and the second channel was set to measure the voltage across the load ($V_L$).  The function generator was programmed to produce a sine wave of \SI{1}{V_{peak}} at \SI{400}{\hertz}, measured with the oscilloscope.  $V_{max}$, $V_{min}$, and DC voltage across $V_L$ was measured with a multimeter and recorded in Table~\ref{tab:rect_vp_vdc} along with the ripple voltage $V_r$ (Eq~\ref{eq:ripple}).  Finally, the source voltage was then left at \SI{5}{V_{peak}}, and $R_L$ was adjusted to \SI{1}{\kilo\ohm} and \SI{100}{\kilo\ohm} and each $V_{DC}$, $V_{max}$, $V_{min}$, and $V_r$ were measured and recorded in Table~\ref{tab:load_v_ripple}.
+First, the capacitance of a \SI{1}{\micro\farad} capacitor was measured and  recorded in Table~\ref{tab:cap} along with the percent difference calculated (Eq~\ref{eq:percent_diff}).  Then the circuit shown in Figure~\ref{fig:volt_rect} was constructed on a breadboard.  The voltage source ($V_S$) and \SI{50}{\ohm} resistor seen in Figure~\ref{fig:volt_rect} represented the function generator used.  Using a resistive decade box, the load resistance ($R_L$) was initially set to \SI{10}{\kilo\ohm}.  Then, the first channel of the oscilloscope was set to measure the output of the function generator and the second channel was set to measure the voltage across the load ($V_L$).  The function generator was programmed to produce a sine wave of \SI{1}{V_{peak}} at \SI{400}{\hertz}, measured with the oscilloscope.  $V_{max}$, $V_{min}$, and DC voltage across $V_L$ was measured with a multimeter and recorded in Table~\ref{tab:rect_vp_vdc} along with the ripple voltage $V_r$ (Eq~\ref{eq:ripple}).  Finally, the source voltage was then left at \SI{5}{V_{peak}}, and $R_L$ was adjusted to \SI{1}{\kilo\ohm} and \SI{100}{\kilo\ohm} and each $V_{DC}$, $V_{max}$, $V_{min}$, and $V_r$ were measured and recorded in Table~\ref{tab:load_v_ripple}.
 
 \subsection{Voltage Regulator}
 \label{sec:volt_reg}
