--- a/school/elec_313/lab3/tex/report.tex
+++ b/school/elec_313/lab3/tex/report.tex
@@ -98,7 +98,7 @@ First, the capacitance of a \SI{1}{\micro\farad} capacitor was measured and  rec
 \subsection{Voltage Regulator}
 \label{sec:volt_reg}
 
-First, a \SI{47}{\ohm} resistor was measured and its \% difference from the nominal resistance value was calculated and both values were recorded in Table~\ref{tab:res}.  The circuit shown in Figure~\ref{fig:volt_reg} was constructed on a breadboard, the HP power supply for the voltage source ($V_S$) set to 9 V, and a decade resistance box as the load resistance ($R_L$) set to \SI{1}{\kilo\ohm}.  Then the load voltage ($V_L$) and load current ($I_L$) was measured and recorded in Table~\ref{tab:volt_reg_meas}, for the $R_L$ of \SI{1}{\kilo\ohm}, \SI{330}{\ohm}, and \SI{100}{\ohm}.  The Zener diode was removed and the open-circuit voltage ($V_{OC}$) was measured and recorded in Table~\ref{tab:volt_reg_meas}, again for the $R_L$ of \SI{1}{\kilo\ohm}, \SI{330}{\ohm}, and \SI{100}{\ohm}.  The Zener diode was added back into the circuit and, using the $R_L$ of \SI{1}{\kilo\ohm}, \SI{330}{\ohm}, and \SI{100}{\ohm}, the point at which the source drops out of regulation ($V_S$ drop) was determined and recorded in Table~\ref{tab:volt_reg_meas} by sweeping the $V_S$.  Finally, the $R_L$ was removed ($R_L$=$\infty$), $V_S$ was set to 9 V, and the voltage across the Zener diode (also $V_L$) was measured and recorded in Table~\ref{tab:volt_reg_meas}.
+First, a \SI{47}{\ohm} resistor was measured and its percent difference from the nominal resistance value was calculated and both values were recorded in Table~\ref{tab:res}.  The circuit shown in Figure~\ref{fig:volt_reg} was constructed on a breadboard, the HP power supply for the voltage source ($V_S$) set to 9 V, and a decade resistance box as the load resistance ($R_L$) set to \SI{1}{\kilo\ohm}.  Then the load voltage ($V_L$) and load current ($I_L$) was measured and recorded in Table~\ref{tab:volt_reg_meas}, for the $R_L$ of \SI{1}{\kilo\ohm}, \SI{330}{\ohm}, and \SI{100}{\ohm}.  The Zener diode was removed and the open-circuit voltage ($V_{OC}$) was measured and recorded in Table~\ref{tab:volt_reg_meas}, again for the $R_L$ of \SI{1}{\kilo\ohm}, \SI{330}{\ohm}, and \SI{100}{\ohm}.  The Zener diode was added back into the circuit and, using the $R_L$ of \SI{1}{\kilo\ohm}, \SI{330}{\ohm}, and \SI{100}{\ohm}, the point at which the source drops out of regulation ($V_S$ drop) was determined and recorded in Table~\ref{tab:volt_reg_meas} by sweeping the $V_S$.  Finally, the $R_L$ was removed ($R_L$=$\infty$), $V_S$ was set to 9 V, and the voltage across the Zener diode (also $V_L$) was measured and recorded in Table~\ref{tab:volt_reg_meas}.
 
 \section{Results}
 \label{sec:results}
@@ -198,20 +198,18 @@ First, a \SI{47}{\ohm} resistor was measured and its \% difference from the nomi
   \end{tabular}
   \caption{\label{tab:volt_reg_diff} Comparison of values for voltage regulator circuit}
 \end{table}
-
-%%% Logically, any of the tables above that refer to a percent difference should be moved to the comparison section, but...  my desire to actually do so is roughly nil.
 \section{Comparison of Results}
 \label{sec:comp_of_res}
 
-%%% The comments about what the experimenter may've done belong more in the conclusion ***Disagree - we're comparing results in this section***, if anywhere ***Agree, it was really a joke. we were so  close becuase I knew waht the values were supposed to be; not because I was able to tell from by sweeping te voltage back n' forht as explained in the procedures.***  Also, not really sure what you're trying to get across***It was a lame attempt at humor - see previous comment***.  The more likely reason(s) values were so close: testing equipment wasn't precise enough ***Disagree***, and/or/mostly we didn't do an actual plot around the knee of the curve ***Agree*** /it's a log function so values change rapidly around that point anyways.  The only thing we could've done better was to have more independent data-takers ***Unnecessary***.
-The PSpice computed values of $V_{OC}$ shown in Table~\ref{tab:volt_reg_calc}, were very close to the measured $V_{OC}$ values (Table~\ref{tab:volt_reg_calc}), and were at most only 3.327\% different (Table~\ref{tab:volt_reg_diff}).  Also, the PSpice computed $V_S$ drop (Table~\ref{tab:volt_reg_calc}) was very close to the measured $V_S$ drop (Table~\ref{tab:volt_reg_meas}) and the \% difference was at most only 1.7\% (Table~\ref{tab:volt_reg_diff}).% (suggesting that the experimenter may have “peeked” at the computed results and subconsciously (or consciously) noticed the recorded value to be almost exactly the same in all three circumstances).
+%%% The comments about what the experimenter may've done belong more in the conclusion ***Disagree - we're comparing results in this section***, if anywhere ***Agree, it was really a joke. we were so  close becuase I knew waht the values were supposed to be; not because I was able to tell from by sweeping te voltage back n' forht as explained in the procedures.***  Also, not really sure what you're trying to get across***It was a lame attempt at humor - see previous comment***. [I did lol, particularly at "peaked".  Puns are the best.]  The more likely reason(s) values were so close: testing equipment wasn't precise enough ***Disagree***, and/or/mostly we didn't do an actual plot around the knee of the curve ***Agree*** /it's a log function so values change rapidly around that point anyways.  The only thing we could've done better was to have more independent data-takers ***Unnecessary***.
+The PSpice computed values of $V_{OC}$ shown in Table~\ref{tab:volt_reg_calc}, were very close to the measured $V_{OC}$ values (Table~\ref{tab:volt_reg_calc}), and were at most only 3.327\% different (Table~\ref{tab:volt_reg_diff}).  Also, the PSpice computed $V_S$ drop (Table~\ref{tab:volt_reg_calc}) was very close to the measured $V_S$ drop (Table~\ref{tab:volt_reg_meas}) and the percent difference was at most only 1.7\% (Table~\ref{tab:volt_reg_diff}).% (suggesting that the experimenter may have “peeked” at the computed results and subconsciously (or consciously) noticed the recorded value to be almost exactly the same in all three circumstances).
 
 \section{Conclusion}
 \label{sec:conclusion}
-%%% There's no reason to refer to equations after the first time in such a short document.  Once in the procedure should be good enough.
-As seen in Figure~\ref{fig:rect_vp_vdc}, as the peak voltage of the rectifier circuit increases, the rectifier DC voltage increases.  Also, as load resistance is increased on the rectifier, it decreases the \% ripple as shown in Table~\ref{tab:load_v_ripple}.  This was probably because the increase of resistance reduced the amount of current that could be dissipated from the capacitor over the same amount of time before it was “charged up” again.  Additionally, the \% ripple would likely decrease as input frequency increases because there would be a smaller time interval for the capacitor to discharge.
+%%% There's no reason to refer to equations after the first time in such a short document.  Once in the procedure should be good enough.  :D
+As seen in Figure~\ref{fig:rect_vp_vdc}, as the peak voltage of the rectifier circuit increases, the rectifier DC voltage increases.  Also, as load resistance is increased on the rectifier, it decreases the percent ripple as shown in Table~\ref{tab:load_v_ripple}.  This was probably because the increase of resistance reduced the amount of current that could be dissipated from the capacitor over the same amount of time before it was “charged up” again.  Additionally, the percent ripple would likely decrease as input frequency increases because there would be a smaller time interval for the capacitor to discharge.
 
-As shown in Table~\ref{tab:volt_reg_meas}, the voltage regulation across the \SI{100}{\ohm} resistor is 5.02\% different than the \SI{5.38}{V} measured when the load resistor was removed from the circuit.  This shows that the Zener diode used in the experiment is not an ideal Zener.  In the regulator circuit (Figure~\ref{fig:volt_reg}), when $V_S$ is below the Zener diode voltage ($V_Z$), $V_{OC}$ is linearly related to $V_S$.  When $V_S$ is above $V_Z$, $V_{OC}$ is almost at a constant value approximately equal to $V_Z$.  When $V_S$ is “close” to $V_Z$, the relationship of $V_{OC}$ to $V_S$ is not linearly related and the simplified calculations we learned in class are less effective at computing the $V_{OC}$.
+As shown in Table~\ref{tab:volt_reg_meas}, the voltage regulation across the \SI{100}{\ohm} resistor is 5.02\% different than the \SI{5.38}{V} measured when the load resistor was removed from the circuit.  This shows that the Zener diode used in the experiment is not an ideal Zener.  In the regulator circuit, when $V_S$ is below the Zener diode voltage ($V_Z$), $V_{OC}$ is linearly related to $V_S$.  When $V_S$ is above $V_Z$, $V_{OC}$ is almost at a constant value approximately equal to $V_Z$.  When $V_S$ is “close” to $V_Z$, the relationship of $V_{OC}$ to $V_S$ is not linearly related and the simplified calculations we learned in class are less effective at computing the $V_{OC}$.
 
 % Information to include:
 %
