--- a/school/elec_313/lab4/tex/report.tex
+++ b/school/elec_313/lab4/tex/report.tex
@@ -1,68 +1,17 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% This layout was adapted from one found at latextemplates.com which
-% was adapted from another.
-%
-% License: CC BY-NC-SA 3.0
-% (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-%
-% Original header:
-%
-% This is a LaTeX version of the sample laboratory report from
-% Virginia Tech's copyrighted 08-09 CHEM 1045/1046 lab manual.
-% Reproduction of this one appendix section for academic purposes
-% should fall under fair use.
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\documentclass{article}
-
-\usepackage{graphicx}
-%\usepackage[acronym]{glossaries} % Lets us use acronyms
-\usepackage{multicol}
-\usepackage{amsmath}
-\usepackage{siunitx} % SI units in math mode
-\usepackage{subcaption}
-
-\author{}
-\title{ELEC-313 \\ Lab 4: DC Motor Driver\\ }
-\date{\today}
-
-%\loadglsentries{acronyms} % Actually loads 'acronyms.tex'
-%\makeglossaries
-
-\begin{document}
-
-\maketitle
-
-\begin{center}
-  \begin{tabular}{lr}
-    Date Performed: & October 09, 2013 \\
-    Partners:       & Charles Pittman    \\
-                    & Stephen Wilson     \\
-  \end{tabular}
-\end{center}
-
- \newpage
-
-% \tableofcontents
-% \listoffigures
-% \listoftables
-% \newpage
-
-% Number the enumerate environment (unordered lists) by letter:
-\renewcommand{\labelenumi}{\alph{enumi}.}
+% Trying to break the document up a bit.  This command simply inserts the contents of the file at this point.  It contains the document license, preamble, and title page: things that aren't likely to change more than once.  This can be used to separate discrete parts of a document into files that're easier to edit at one time.
+\input{./header.tex}
 
 \section{Objective}
 \label{sec:objective}
 
-The objective is to construct, measure, and observe the behavior of two common diode circuits: a voltage rectifier, and a voltage regulator.
+The objective is to construct, measure, and observe the operation of a DC motor driver.
 
 \section{Equipment}
 \label{sec:equipment}
 
 \begin{tabular}{ll}
   \centering
-  Compact L290 Motor Driver Kit & Function generator: HP 33120A \\
+  Compact L298 Motor Driver Kit & Function generator: HP 33120A \\
   \SI{6}{V} DC Motor            & Multimeter:        \\
   Power supply: HP E3631A       & Oscilloscope: Agilent 54622D  \\
 \end{tabular}
@@ -143,26 +92,26 @@ The objective is to construct, measure, and observe the behavior of two common d
 %%% There's no reason to refer to equations after the first time in such a short document.  Once in the procedure should be good enough.  :D
 % As seen in Figure~\ref{fig:rect_vp_vdc}, as the peak voltage of the rectifier circuit increases, the rectifier DC voltage increases.  Also, as load resistance is increased on the rectifier, it decreases the percent ripple as shown in Table~\ref{tab:load_v_ripple}.  This was probably because the increase of resistance reduced the amount of current that could be dissipated from the capacitor over the same amount of time before it was “charged up” again.  Additionally, the percent ripple would likely decrease as input frequency increases because there would be a smaller time interval for the capacitor to discharge.
 
-\section{Equations}
-\label{sec:equations}
+% \section{Equations}
+% \label{sec:equations}
 
-% LaTeX sees blank lines as a start of another paragraph.  To avoid
-% unnecessary vertical spaces between equations, and still visually
-% separate in source, put a comment between them.
-%
-\begin{equation}
-  \label{eq:percent_diff}
-  \%_{diff} = \frac{|nominal - measured|}{nominal}\times 100\%
-\end{equation}
-%
-\begin{equation}
-  \label{eq:ripple}
-  V_r = V_{max} - V_{min}
-\end{equation}
-%
-\begin{equation}
-  \label{eq:volt_reg}
-  \%_{reg} = \frac{V_{load} - V_{no load}}{V_{no load}}\times 100\%
-\end{equation}
+% % LaTeX sees blank lines as a start of another paragraph.  To avoid
+% % unnecessary vertical spaces between equations, and still visually
+% % separate in source, put a comment between them.
+% %
+% \begin{equation}
+%   \label{eq:percent_diff}
+%   \%_{diff} = \frac{|nominal - measured|}{nominal}\times 100\%
+% \end{equation}
+% %
+% \begin{equation}
+%   \label{eq:ripple}
+%   V_r = V_{max} - V_{min}
+% \end{equation}
+% %
+% \begin{equation}
+%   \label{eq:volt_reg}
+%   \%_{reg} = \frac{V_{load} - V_{no load}}{V_{no load}}\times 100\%
+% \end{equation}
 
 \end{document}
