--- a/school/elec_313/lab4/tex/report.tex
+++ b/school/elec_313/lab4/tex/report.tex
@@ -41,12 +41,12 @@ Prior to performing the lab, the Compact L298 Motor Driver Board was constructed
 \subsection{Part One}
 \label{sec:part_one}
 
-First, the (+) and (-) terminals of the Motor Driver Board were connected to the 6V DC power supply via the breadboard. Then the regulated +5V (H) output of the Motor Driver Board was connected to the breadboard, so it can be used in later steps to enable the driver logic. Wires were connected to the motor output terminals on the left side of the Motor Driver Board. Inputs L1, L2, and Enable (E1-2) were connected in accordance with Table 1. The output of the DC power supply was set to 6V and the motor output voltage (Vout) was measured and the LED lights were observed. Results for each input configuration shown in Table 1 were also recorded in Table 1. Then, the output of the DC power supply was turned off and 6V DC motor was connected to the output of the Motor Driver Board. The output of the DC power supply was set to 6 V and inputs were connected in accordance with Table 1 and the direction of motor rotation was also recorded in Table 1. Finally, L1, L2, and Enable were set in the clockwise motor rotation (according to table 1)and the DC power supply was swept from 6V to 3V in .1V increments and the effects were observed. The output of the DC power supply was turned off and DC motor was disconnected.
+First, the ($+$) and ($-$) terminals of the motor driver board were connected to the \SI{6}{V} DC power supply via the breadboard.  Then the regulated \SI{+5}{V} (H) output of the motor driver board was connected to the breadboard, so it can be used in later steps to enable the driver logic.  Wires were connected to the motor output terminals on the left side of the motor driver board.  Inputs $L_1$, $L_2$, and $Enable$ (E1-2) were connected in accordance with Table~\ref{tab:logic}.  The output of the DC power supply was set to \SI{6}{V} and the motor output voltage ($V_{out}$) was measured and the LED lights were observed.  Results for each input configuration shown in Table~\ref{tab:logic} were also recorded in Table~\ref{tab:logic}.  Then, the output of the DC power supply was turned off and \SI{6}{V} DC motor was connected to the output of the motor driver board.  The output of the DC power supply was set to \SI{6}{V} and inputs were connected in accordance with Table~\ref{tab:logic} and the direction of motor rotation was also recorded in Table~\ref{tab:logic}.  Finally, $L_1$, $L_2$, and $Enable$ were set in the clockwise motor rotation (according to table 1)and the DC power supply was swept from \SI{6}{V} to \SI{3}{V} in \SI{0.1}{V} increments and the effects were observed.  The output of the DC power supply was turned off and DC motor was disconnected.
 
 \subsection{Part Two}
 \label{sec:part_two}
 
-First the function generator was set to a square wave with a frequency of 20 kHz. Channel 1 of the oscilloscope was connected to the output of the function generator and the square wave was offset for 0V to 5V. L1 and L2 were again set for clockwise rotation and the Enable input was connected to the function generator. The DC power supply was turned on and set to 6V. Then, the \%Duty of the square wave was swept from 20\% to 80\% in 10\% increments and the Motor Driver Board output was recorded in Table 2. After that, the output of the DC power supply was turned off and the \%Duty of the function generator was rest to 50\%. Then, the 6V DC motor was connected to the motor output of the Motor Driver Board and the output of the DC power supply was set to 6V. The \%Duty of the square wave was swept from 50\% to 80\% in 1\% increments and motor speed was observed.
+First the function generator was set to a square wave with a frequency of 20 kHz.  Channel 1 of the oscilloscope was connected to the output of the function generator and the square wave was offset for 0V to \SI{5}{V}.  $L_1$ and $L_2$ were again set for clockwise rotation and the $Enable$ input was connected to the function generator.  The DC power supply was turned on and set to \SI{6}{V}.  Then, the \%Duty of the square wave was swept from 20\% to 80\% in 10\% increments and the motor driver board output was recorded in Table~\ref{tab:duty}.  After that, the output of the DC power supply was turned off and the \%Duty of the function generator was rest to 50\%.  Then, the \SI{6}{V} DC motor was connected to the motor output of the motor driver board and the output of the DC power supply was set to \SI{6}{V}.  The \%Duty of the square wave was swept from 50\% to 80\% in 1\% increments and motor speed was observed.
 
 \section{Results}
 \label{sec:results}
@@ -71,7 +71,7 @@ First the function generator was set to a square wave with a frequency of 20 kHz
 \begin{table}[hbtp]
   \centering
   \begin{tabular}{cc}
-    Duty Cycle & Vout \\
+    Duty Cycle & \si{V_{out}} \\
     \hline
     20\% & \SI{-3.01}{V} \\
     30\% & \SI{-3.39}{V} \\
@@ -92,9 +92,9 @@ First the function generator was set to a square wave with a frequency of 20 kHz
 \section{Conclusion}
 \label{sec:conclusion}
 
+The motor driver board can be adjusted to control the speed and direction of the DC motor through various mechanisms.  First, the $Enable$ input must ``see'' ~\SI{5}{V} before the Motor Drive Board can then allow the $L_1$ and $L_2$ inputs control the phase/rotation of the output.  To control the of the output voltage, the $L_1$ and $L_2$ inputs must also see ~\SI{5}{V} separately.  In our configuration, when $L_1$ was connected to \SI{5}{V}, the motor rotated counterclockwise (Table~\ref{tab:logic}).  When $L_2$ was connected, the motor turned clockwise (Table~\ref{tab:logic}). When both were connected or neither was connected, the motor didn't turn at all.
 
-The Motor Driver Board can be adjusted to control the speed and direction of the DC motor through various mechanisms. First, the Enable input must see ~5V before the Motor Drive Board can then allow the L1 and L2 inputs control the phase/rotation of the output. To control the of the output voltage, the L1 and L2 inputs must also see ~5V separately. In our configuration, when L1 was connected to 5V, the motor rotated counterclockwise (Table 1). When L2 was connected, the motor turned clockwise (Table 1). When both were connected or neither was connected, the motor didnt turn at all.
-The Motor Driver Board speed was adjust via 2 different approaches in the experiment. In part I, the input voltage was adjusted to proportionately affect the output voltage, thus varying the speed of the motor. As input voltage was swept from high to low in part I, the motor speed slowed and eventually no noticeable turning could be observed at 3V. In part II, the \%Duty of the 5V to the Enable input was adjusted such that the time that 5V was seen at the Enable input was varied from 50\% of the time to 80\% of the time which resulted in lower to higher Vrms accordingly. This proportional change in \%Duty and output Vrms was observed and recorded Table 2.
+The motor driver board speed was adjusted via two different approaches in the experiment.  In part I, the input voltage was adjusted to proportionately affect the output voltage, thus varying the speed of the motor.  As input voltage was swept from high to low in part I, the motor speed slowed and eventually no noticeable turning could be observed at \SI{3}{V}.  In part II, the \%Duty of the \SI{5}{V} to the $Enable$ input was adjusted such that the time that \SI{5}{V} was seen at the $Enable$ input was varied from 50\% of the time to 80\% of the time which resulted in lower to higher Vrms accordingly.  This proportional change in \%Duty and output Vrms was observed and recorded Table~\ref{tab:duty}.
 
 % \section{Equations}
 % \label{sec:equations}
