Adding circuit figures

--- a/school/elec_313/lab5/tex/report.tex
+++ b/school/elec_313/lab5/tex/report.tex
@@ -16,22 +16,22 @@ The objective is to construct, measure, and observe the operation of a DC motor 
   Power supply: HP E3631A       & Oscilloscope: Agilent 54622D  \\
 \end{tabular}
 
-% \section{Schematics}
-% \label{sec:schematics}
+ \section{Schematics}
+ \label{sec:schematics}
 
-% \begin{figure}[hbtp]
-%   \centering
-%   \begin{subfigure}[b]{0.6\textwidth}
-%     \includegraphics[width=\textwidth]{volt_rect}
-%     \caption{\label{fig:volt_rect} Voltage rectifier circuit.}
-%   \end{subfigure}%
-%   ~
-%   \begin{subfigure}[b]{0.4\textwidth}
-%     \includegraphics[width=\textwidth]{volt_reg}
-%     \caption{\label{fig:volt_reg} Voltage regulator circuit.}
-%   \end{subfigure}
-%   \caption{\label{fig:circuits_tested} Circuits used in this lab.}
-% \end{figure}
+ \begin{figure}[hbtp]
+   \centering
+   \begin{subfigure}[b]{0.5\textwidth}
+     \includegraphics[width=\textwidth]{invert}
+     \caption{\label{fig:invert} CMOS Inverter}
+   \end{subfigure}%
+   ~
+   \begin{subfigure}[b]{0.5\textwidth}
+     \includegraphics[width=\textwidth]{nand}
+     \caption{\label{fig:nand} CMOS NAND}
+   \end{subfigure}
+   \caption{\label{fig:schematics} Circuits used in this lab.}
+ \end{figure}
 
 \section{Procedure}
 \label{sec:procedure}
