Forgot to add the drawings

--- a/school/elec_313/lab5/tex/header.tex
+++ b/school/elec_313/lab5/tex/header.tex
@@ -24,7 +24,7 @@
 \usepackage{subcaption}
 
 \author{}
-\title{ELEC-313 \\ Lab 4: DC Motor Driver\\ }
+\title{ELEC-313 \\ Lab 5: CMOS Circuits\\ }
 \date{\today}
 
 % \loadglsentries{acronyms} % Actually loads 'acronyms.tex'
@@ -36,18 +36,18 @@
 
 \begin{center}
   \begin{tabular}{lr}
-    Date Performed: & October 09, 2013 \\
+    Date Performed: & October 16, 2013 \\
     Partners:       & Charles Pittman    \\
-                    & Stephen Wilson     \\
+    & Stephen Wilson     \\
   \end{tabular}
 \end{center}
 
- \newpage
+\newpage
 
-% \tableofcontents
-% \listoffigures
-% \listoftables
-% \newpage
+\tableofcontents
+\listoffigures
+\listoftables
+\newpage
 
 % Number the enumerate environment (unordered lists) by letter:
 \renewcommand{\labelenumi}{\alph{enumi}.}
