Adding quick graphs of data

--- a/school/elec_313/lab5/tex/header.tex
+++ b/school/elec_313/lab5/tex/header.tex
@@ -21,6 +21,7 @@
 \usepackage{multicol}
 \usepackage{amsmath}
 \usepackage{siunitx} % SI units in math mode
+\usepackage[usenames]{color}
 \usepackage{subcaption}
 
 \author{}
