--- a/school/elec_313/lab5/tex/report.tex
+++ b/school/elec_313/lab5/tex/report.tex
@@ -52,7 +52,7 @@ The objective is to construct and observe the operation of a CMOS inverter and N
 \begin{figure}[hbtp]
   \centering
   \input{data1.tex}
-  \caption{\label{fig:data1} Data 1}
+  \caption{\label{fig:data1} Output of CMOS inverter}
 \end{figure}
 
 \begin{figure}[hbtp]
@@ -70,7 +70,7 @@ The objective is to construct and observe the operation of a CMOS inverter and N
 \begin{figure}[hbtp]
   \centering
   \input{data4.tex}
-  \caption{\label{fig:data4} Data 4}
+  \caption{\label{fig:data4} Output of CMOS NAND gate}
 \end{figure}
 
 % \begin{table}[hbtp]
